[#17760573] Fixing spacing and alignment of pagination links.

--- a/app/assets/stylesheets/issues.css.scss
+++ b/app/assets/stylesheets/issues.css.scss
@@ -121,7 +121,7 @@ body.issues {
   
   .count, .arrow {
     float: left;
-    margin: 10px 10px 0 0;
+    margin: 10px 5px 0 0;
     display: block;
   }
 
@@ -193,7 +193,7 @@ body.issues {
 
   .article_count {
     border-top: 1px solid $blue;
-    margin-bottom: 35px;
+    margin: 0 0 35px 125px;
   }
   
   .see_more{
